# manim_plus

./: .gitignore  AGENTS.md  README.md  example_scene.py  pyproject.toml  requirements.txt
.notifications/: 2026-03-06.md  2026-03-07.md  2026-03-13.md
docs/design/: physics2video-design.md  system_architecture.md
examples/: physics_demo.py  svg_demo.py
src/physics2video/: __init__.py
src/physics2video/evaluation/: __init__.py  scorer.py
src/physics2video/knowledge/: __init__.py  rag.py
src/physics2video/nodes/: __init__.py
src/physics2video/pipeline/: __init__.py  graph.py  state.py
src/physics2video/primitives/: __init__.py  circuit.py  force_diagram.py  motion.py  physics_scene.py
src/physics2video/templates/: __init__.py  circuit_template.py  force_template.py  svg_builder.py
src/physics2video/utils/: __init__.py  config.py  tts.py
tests/: __init__.py  test_knowledge.py  test_pipeline.py  test_primitives.py  test_templates.py
